# serializer version: 1
# name: TestJATICImageClassifier.test_smoketest[multiple images]
  list([
    dict({
      0: 0.0,
      1: 0.15,
      2: 0.8,
    }),
    dict({
      0: 0.0,
      1: 0.15,
      2: 0.8,
    }),
  ])
# ---
# name: TestJATICImageClassifier.test_smoketest[non-consecutive labels]
  list([
    dict({
      1: 0.0,
      2: 0.15,
      4: 0.8,
    }),
  ])
# ---
# name: TestJATICImageClassifier.test_smoketest[single 3 channel]
  list([
    dict({
      0: 0.0,
      1: 0.15,
      2: 0.8,
    }),
  ])
# ---
# name: TestJATICImageClassifier.test_smoketest[single greyscale]
  list([
    dict({
      0: 0.0,
      1: 0.15,
      2: 0.8,
    }),
  ])
# ---
# name: TestJATICImageClassifier.test_smoketest[unsorted non-consecutive labels]
  list([
    dict({
      1: 0.0,
      2: 0.15,
      4: 0.8,
    }),
  ])
# ---
